Returned to a version where styling and layout for tavern page is correct on smaller screens, will be making seperate styling and layout for larger screen sizes

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -138,9 +138,11 @@ footer {
     border: 1px solid black;
     box-shadow: 1px 2px 1px 2px;
     border-radius: 5px;
-    overflow: hidden;
 }
 
+.remove-margin {
+    margin: 0px;
+}
 .character-button {
     margin: 10px;
 }
